# ga-lecture

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  hello.yml
config/: settings.py  urls.py
web/tests/: test_health.py
